--- a/assets/css/Footer-Clean-icons.css
+++ b/assets/css/Footer-Clean-icons.css
@@ -10,6 +10,12 @@
   color: var(--bs-primary);
 }
 
+body {
+  font-family: "Roboto", sans-serif !important;
+  font-weight: 400 !important;
+  font-style: normal !important;
+}
+
 .bs-icon-xs {
   --bs-icon-size: 1rem;
   width: calc(var(--bs-icon-size) * 1.5);
