--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,18 @@
   color: var(--bs-primary);
 }
 
+/* deterrminar la fuente de la pagina */
 body {
   font-family: "Roboto", sans-serif !important;
   font-weight: 400 !important;
   font-style: normal !important;
 }
 
+h1 {
+  font-weight: bold;
+}
+
+/* bajo este comentario se encuentra la personalizacion de los botones */
 .bs-icon-xs {
   --bs-icon-size: 1rem;
   width: calc(var(--bs-icon-size) * 1.5);
