--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 h1 {
   font-weight: bold;
 }
+/* Fuente para los titulos */
 
 /* bajo este comentario se encuentra la personalizacion de los botones */
 .bs-icon-xs {
